# pyodide-ship-combat

./: AGENTS.md  BATTLE_SIM.py  DESIGN_CANVAS.md  README.md  battle.html  fleet_setup.py  models.py  pyproject.toml  requirements.txt  sample_interface.html
ship_combat/: battle_sim.py  fleet_setup.py  models.py
tests/: test_battle_phases.py  test_mechanics.py
